results/SVCOMP/conversational/log-assert2-2024_03_08_14_09_39.txt
import java.util.Random;

class assert2 {
    //@ ensures \nothing;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: incompatible types: <none> cannot be converted to boolean
    //@ ensures \nothing;
                ^
1 error

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

import java.util.Random;

class assert2 {
    //@ ensures true;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:8: verify: The prover cannot establish an assertion (Assert) in method main: i is greater 1000
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
                       ^
1 verification failure

